# idealforms

./: .env.example  .gitignore  README.md  examples.ipynb  pyproject.toml  release.sh  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: pre-release.yml  tagged-release.yml  tests.yml
docs/: examples.ipynb
src/idealforms/: __about__.py  bar.py  formatters.py  pie.py
tests/: bar_test.py  formatters_test.py  pie_test.py
